# vegetation_drought_resilience

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  run_phase2.bat  run_phase2.sh  setup.py
app/: __init__.py  main.py
app/components/: __init__.py
app/pages/: __init__.py
docs/: architecture.md
src/: __init__.py  cli.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  database.py  fetchers.py
src/features/: __init__.py  baseline.py  vegetation.py  weather.py
src/modeling/: __init__.py  drought_index.py
src/preprocessing/: __init__.py  alignment.py  cloud_masking.py  land_cover.py
src/utils/: __init__.py  logging_config.py  validators.py
src/visualization/: __init__.py  maps.py
tests/: __init__.py  conftest.py
